# LivePresence

./: .gitignore  LivePresence_GUI.py  LivePresence_WebSocket.py  Presences.py  README.md  main.py  pyproject.toml
extension/: home.html  manifest.json  popup.js  service-worker.js  websocket.js
