[project]
name = "livepresence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "dataclasses>=0.8",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "nicegui>=3.12.1",
    "pypresence>=4.6.1",
    "websockets>=16.0",
]
